<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Control33</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="nombretexto">Nombre</string>
    <string name="textswitch">Switch</string>
    <string name="opciontext1">Opcion 1</string>
    <string name="opciontext2">Opcion 2</string>
    <string name="opciontext3">Opcion 3</string>
    <string name="submit">OnSubmitForm!!!</string>
    <string name="agregar">Agregar:</string>
    <string name="switch_">Switch:</string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="title_activity_main_activity_list">MainActivityList</string>

</resources>
