<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="top"
    android:orientation="vertical"
    tools:context=".MainActivity" >

      <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
      	android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/nombretexto" />
    
    
    <Switch
        android:id="@+id/switchView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/textswitch" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp" >

        <RadioButton
            android:id="@+id/r0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/opciontext1" />

        <RadioButton
            android:id="@+id/r1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opciontext2" />

        <RadioButton
            android:id="@+id/r2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opciontext3" />
    </RadioGroup>

 <SeekBar
        android:id="@+id/seekBar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp" />

    <Button
        android:id="@+id/buttonclick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       	android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:onClick="onClick"
        android:text="@string/submit" />
    
      <Button
        android:id="@+id/buttonagregar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       	android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:onClick="onClickAgregar"
        android:text="@string/agregar" />

</LinearLayout>